# pwri-plantmonitoring

./: .env  .replit  CNAME  DASHBOARD_UX_IMPROVEMENTS.md  DEPLOYMENT.md  Dashboard.tsx  Operations.tsx  Plants.tsx  apply_patches.py  backend_test.py  main.py  package-lock.json  package.json  replit.md  tailwind.config.ts  test_result.md  tsconfig.json  vercel.json
.emergent/: emergent.yml
.github/workflows/: ci.yml  jekyll-gh-pages.yml  nightly-summary.yml
.next/: app-build-manifest.json  trace
.next/cache/: config.json
.next/server/: server-reference-manifest.json  webpack-runtime.js
app/: layout.tsx  not-found.tsx  providers.tsx
attached_assets/: Pasted-1-AFM-MMF-Backwash-Mode-Responsive-Layout-Desktop-View-_1777129516714.txt  Pasted-App-Prompt-Plant-Subview-Backwash-Bypass-Power-Meter-Co_1777129610775.txt  Pasted-Features-1-AFM-MMF-Backwash-Mode-Responsive-Layout-Desk_1777129583744.txt
backend/: _retired_regression_service.py  admin_helpers.py  admin_service.py  ai_import_helpers.py  ai_import_service.py  ai_service.py  ai_tools.py  compliance_service.py  cron_service.py  downtime_parser.py  import_parser.py  migrations_status.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  regression_service.py  requirements.txt  seed_service.py  server.py  supa_client.py
backend/tests/: test_ai_and_admin.py  test_compliance_service.py  test_downtime_parser.py  test_import_parser.py  test_pwri_backend.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
memory/: PRD.md
scripts/: 20260423_add_well_depth_to_pms.sql
src/: App.tsx  index.css
src/lib/: csv.ts  (+1 more)
supabase/: config.toml
test_reports/: iteration_1.json  iteration_10.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
(+337 files in other folders)
