[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.129",
    "cryptography>=42.0.8",
    "deprecation>=2.1.0",
    "email-validator>=2.2.0",
    "et-xmlfile>=2.0.0",
    "fastapi==0.110.1",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "mongomock-motor>=0.0.36",
    "motor==3.3.1",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "passlib>=1.7.4",
    "postgrest==1.0.2",
    "pydantic>=2.6.4",
    "pyjwt>=2.10.1",
    "pymongo==4.5.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "supabase==2.15.0",
    "typer>=0.9.0",
    "tzdata>=2024.2",
    "uvicorn==0.25.0",
]
