[project]
name = "pwri-plantmonitoring-backend"
version = "2.0.0"
description = "PWRI Plant Monitoring Backend — 100% Supabase"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.129",
    "deprecation>=2.1.0",
    "email-validator>=2.2.0",
    "et-xmlfile>=2.0.0",
    "fastapi==0.110.1",
    "gotrue>=2.4,<3.0",
    "httpx>=0.27.0",
    "h2>=4.0,<5",
    "lxml>=5.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "passlib>=1.7.4",
    "postgrest==1.0.2",
    "pydantic>=2.6.4",
    "pyjwt>=2.10.1",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "realtime>=2.0,<3.0",
    "requests>=2.31.0",
    "scipy>=1.12.0",
    "storage3>=0.11,<1.0",
    "supabase==2.15.0",
    "supafunc>=0.9,<1.0",
    "typer>=0.9.0",
    "tzdata>=2024.2",
    "uvicorn==0.25.0",
]
